<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FacebookLinkedinTwitterConnectionSample</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="back">Back</string>
    <string name="backsymbol"></string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="socialcards">Socialcards</string>
    <string name="netcoins">Netcoins</string>
    <string name="peoples">People</string>
    <string name="settings">Settings</string>
    <string name="connect_to_facebook">Connect to Facebook</string>
    <string name="connect_to_twitter">Connect to Twitter</string>
    <string name="connect_to_linkedin">Connect to Linkedin</string>
    <string name="logout">Logout</string>
      <string name="app_id">225563294304079</string>    

</resources>